// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppTopBar if a resource is present renders a resource and dropdownActions (if given) and a close button 1`] = `
<portal to="app.runtime.header.left">
  <div class="oc-app-top-bar oc-flex">
    <span class="oc-app-top-bar-inner oc-px-m oc-flex oc-flex-middle oc-flex-between">
      <div class="open-file-bar oc-flex">
        <oc-resource-stub id="app-top-bar-resource" isextensiondisplayed="true" isicondisplayed="true" ispathdisplayed="false" isresourceclickable="true" isthumbnaildisplayed="false" parentfolderlinkiconadditionalattributes="[object Object]" parentfoldername="test" pathprefix="Shares/test" resource="undefined"></oc-resource-stub>
      </div>
      <div class="oc-flex main-actions">
        <!--v-if-->
        <oc-button-stub appearance="raw-inverse" arialabel="Show context menu" class="oc-p-xs" disabled="false" gapsize="medium" id="oc-openfile-contextmenu-trigger" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="brand"></oc-button-stub>
        <oc-drop-stub closeonclick="true" dropid="oc-openfile-contextmenu" isnested="false" mode="click" paddingsize="small" position="bottom-start" toggle="#oc-openfile-contextmenu-trigger"></oc-drop-stub>
        <oc-button-stub appearance="raw-inverse" arialabel="Close" disabled="false" gapsize="medium" id="app-top-bar-close" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="brand"></oc-button-stub>
      </div>
    </span>
  </div>
</portal>
`;

exports[`AppTopBar if a resource is present renders a resource and dropdownActions as well as mainActions (if both are passed) and a close button 1`] = `
<portal to="app.runtime.header.left">
  <div class="oc-app-top-bar oc-flex">
    <span class="oc-app-top-bar-inner oc-px-m oc-flex oc-flex-middle oc-flex-between">
      <div class="open-file-bar oc-flex">
        <oc-resource-stub id="app-top-bar-resource" isextensiondisplayed="true" isicondisplayed="true" ispathdisplayed="false" isresourceclickable="true" isthumbnaildisplayed="false" parentfolderlinkiconadditionalattributes="[object Object]" parentfoldername="test" pathprefix="Shares/test" resource="undefined"></oc-resource-stub>
      </div>
      <div class="oc-flex main-actions">
        <context-action-menu-stub actionoptions="[object Object]" appearance="raw-inverse" menusections="[object Object]" variation="brand"></context-action-menu-stub>
        <oc-button-stub appearance="raw-inverse" arialabel="Show context menu" class="oc-p-xs" disabled="false" gapsize="medium" id="oc-openfile-contextmenu-trigger" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="brand"></oc-button-stub>
        <oc-drop-stub closeonclick="true" dropid="oc-openfile-contextmenu" isnested="false" mode="click" paddingsize="small" position="bottom-start" toggle="#oc-openfile-contextmenu-trigger"></oc-drop-stub>
        <oc-button-stub appearance="raw-inverse" arialabel="Close" disabled="false" gapsize="medium" id="app-top-bar-close" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="brand"></oc-button-stub>
      </div>
    </span>
  </div>
</portal>
`;

exports[`AppTopBar if a resource is present renders a resource and mainActions (if given) and a close button 1`] = `
<portal to="app.runtime.header.left">
  <div class="oc-app-top-bar oc-flex">
    <span class="oc-app-top-bar-inner oc-px-m oc-flex oc-flex-middle oc-flex-between">
      <div class="open-file-bar oc-flex">
        <oc-resource-stub id="app-top-bar-resource" isextensiondisplayed="true" isicondisplayed="true" ispathdisplayed="false" isresourceclickable="true" isthumbnaildisplayed="false" parentfolderlinkiconadditionalattributes="[object Object]" parentfoldername="test" pathprefix="Shares/test" resource="undefined"></oc-resource-stub>
      </div>
      <div class="oc-flex main-actions">
        <context-action-menu-stub actionoptions="[object Object]" appearance="raw-inverse" menusections="[object Object]" variation="brand"></context-action-menu-stub>
        <!--v-if-->
        <oc-button-stub appearance="raw-inverse" arialabel="Close" disabled="false" gapsize="medium" id="app-top-bar-close" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="brand"></oc-button-stub>
      </div>
    </span>
  </div>
</portal>
`;

exports[`AppTopBar if a resource is present renders a resource and no actions (if none given) and a close button 1`] = `
<portal to="app.runtime.header.left">
  <div class="oc-app-top-bar oc-flex">
    <span class="oc-app-top-bar-inner oc-px-m oc-flex oc-flex-middle oc-flex-between">
      <div class="open-file-bar oc-flex">
        <oc-resource-stub id="app-top-bar-resource" isextensiondisplayed="true" isicondisplayed="true" ispathdisplayed="false" isresourceclickable="true" isthumbnaildisplayed="false" parentfolderlinkiconadditionalattributes="[object Object]" parentfoldername="test" pathprefix="Shares/test" resource="undefined"></oc-resource-stub>
      </div>
      <div class="oc-flex main-actions">
        <!--v-if-->
        <!--v-if-->
        <oc-button-stub appearance="raw-inverse" arialabel="Close" disabled="false" gapsize="medium" id="app-top-bar-close" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="brand"></oc-button-stub>
      </div>
    </span>
  </div>
</portal>
`;

exports[`AppTopBar if no resource is present renders only a close button 1`] = `
<portal to="app.runtime.header.left">
  <div class="oc-app-top-bar oc-flex">
    <span class="oc-app-top-bar-inner oc-px-m oc-flex oc-flex-middle oc-flex-between">
      <div class="open-file-bar oc-flex">
        <oc-resource-stub id="app-top-bar-resource" isextensiondisplayed="true" isicondisplayed="true" ispathdisplayed="false" isresourceclickable="true" isthumbnaildisplayed="false" parentfolderlinkiconadditionalattributes="[object Object]" parentfoldername="test" pathprefix="Shares/test" resource="undefined"></oc-resource-stub>
      </div>
      <div class="oc-flex main-actions">
        <!--v-if-->
        <!--v-if-->
        <oc-button-stub appearance="raw-inverse" arialabel="Close" disabled="false" gapsize="medium" id="app-top-bar-close" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="brand"></oc-button-stub>
      </div>
    </span>
  </div>
</portal>
`;
